project desc bug fix on mobile devices

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -201,7 +201,7 @@
 		width: 100%;
 	}
 	.projects-desc{
-		height: 70px;
+		height: 120px;
 	}
 	.img-projects{
 		min-width: 0;
